--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,6 +22,8 @@ html {
   font-size: 16px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: auto;
+  overflow-y: scroll;
 }
 
 body {
@@ -31,6 +33,7 @@ body {
   color: $gray-800;
   background-color: $gray-50;
   min-height: 100vh;
+  overflow-x: auto;
 }
 
 // ========================================
